k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: dev
  labels:
    app: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: nginx-latest
          ports:
          - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: dev
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
